refact: replace usage of Collections.singleton with Set.of